--- a/style.css
+++ b/style.css
@@ -1,23 +1,12 @@
 html {
     height: 100%;
 }
+
 body{
     background-color: white;
     font-family: arial, sans-serif;
     height: 100%;
 }
-
-#wrapper {
-    min-height: 100%;
-    margin-bottom: -40px;
-}
-
-
-#footer {
-    height: 40px;
-    background-color: #f2f2f2;
-}
-
 
 a {
     color: black;
@@ -28,12 +17,27 @@ a:hover {
     text-decoration: underline;
 }
 
+
+#wrapper {
+    min-height: 100%;
+    margin-bottom: -40px;
+}
+
+
+#footer {
+    height: 40px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+    box-sizing: border-box;
+}
+
+
 #language-select {
     color: #0000EE;
 }
 #header {
-    
-    height: 80px;
+    padding-top: 10px;
+    height: 70px;
     clear: both; 
 }
 .header-menu {
@@ -69,14 +73,62 @@ a:hover {
 }
 
 #content {
-    margin: 80px auto 0 auto;
+    margin: 125px auto 0 auto;
     width: 585px;
 }
 
-#footer {
-    border-top: 1px solid #e4e4e4;
-    box-sizing: border-box;
+#content img {
+    margin: 0 auto;
+    display: block;
 }
+
+.sub-text {
+    margin: -20px 0 30px 372px;
+    color: blue;
+    
+}
+
+form, input[type="text"] {
+    width: inherit;
+}
+
+input[type="text"] {
+    height: 40px;
+    border: 1px solid #f4f4f4;
+}
+
+input[type="text"]:focus {
+    border: 1px solid blue;
+    outline: none;
+}
+
+form div {
+    width: 325px;
+    margin: 20px auto;
+}
+
+button {
+    display: inline;
+    width: 120px;
+    margin: 0 20px;
+    height: 40px;
+    background-color: #f5f5f5;
+    border: 1px solid #cccccc;
+    color: #929292;
+}
+
+button:hover {
+    border: 1px solid #929292;
+    color: #101010;
+}
+
+
+
+#sub-form-text {
+    text-align:  center;
+    width: inherit;
+}
+
 
 #footer ul li {
     display: inline;
